crates/plotnik-tests/tests/02-parser/recovery_validation/capture_dotted_followed_by_field.txt
Q = (node (a) @foo.bar name: (other))
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:15
  |
1 | Q = (node (a) @foo.bar name: (other))
  |               ^^^^^^^^
  |
help: use `@foo_bar`
  |
1 - Q = (node (a) @foo.bar name: (other))
1 + Q = (node (a) @foo_bar name: (other))
  |
help: capture names become result field names
